fix: update styling for header badge, better wrapping

--- a/src/app/modules/irc/components/irc-match-header/irc-match-header.component.scss
+++ b/src/app/modules/irc/components/irc-match-header/irc-match-header.component.scss
@@ -58,6 +58,8 @@ $badge-color: #ff6b93;
 			letter-spacing: -0.7px;
 			line-height: 1;
 
+			word-break: break-word;
+
 			&.red {
 				color: $red-team-chat-colour;
 			}
@@ -131,6 +133,10 @@ $badge-color: #ff6b93;
 
 			.icon {
 				flex-shrink: 0;
+			}
+
+			.content {
+				flex-wrap: wrap;
 			}
 		}
 	}
